--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "node server.js, react-scripts start",
+    "start": "node server.js",
     "startReact": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
